[project]
name = "certinelpy"
version = "0.1.0"
description = "A python implementation of cloudflare/certinel"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["watchfiles>=0.24.0"]

[project.scripts]
generate = "certinelpy:generate"
watch = "certinelpy:watch"
scan = "certinelpy:scan"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pex>=2.20.1"]

[tool.pyright]
exclude = [".venv"]
venv = ".venv"
venvPath = "."
